# Tiago_arm_trajectory

./: CMakeLists.txt  README.md  package.xml
src/: send_trajectory.cpp
